# rsomics-bam-to-fastq

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
