[package]
name = "rsomics-bam-to-fastq"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "Extract FASTQ reads from BAM — Rust port of samtools fastq"

[[bin]]
name = "rsomics-bam-to-fastq"
path = "src/main.rs"


[lib]
name = "rsomics_bam_to_fastq"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noodles = { version = "0.110", features = ["sam", "bam"]  }

[dev-dependencies]
tempfile = "3"

